# RideH-backend

./: .gitignore  main.py  pyproject.toml  schema.py
Router/: auth.py  ride.py
Services/: DriverSimulation.py  Fares.py  Matching.py  Pricing.py  RiderService.py  RouteService.py  Trips.py  WebSocketManager.py  auth.py
Tools/: genDriver.py  geohashing.py  graph_loader.py  graphingMap.py  migrate_drivers.py
WIP/: FindDriver.py
db/: db.py  ride_hailing.db
